--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>To-Do List</h1>
       <input type="text" id="taskInput" placeholder="Add a new task..." />
 
-      <button id="addTaskButton">Add Task</button>
+      <button onClick ="addTask()" id="addTaskButton">Add Task</button>
 
       <ul id="taskList">
       </ul>
